fix: anonymize api update
